--- a/for/24/a.html
+++ b/for/24/a.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+    Дана строка. Напишите программу, которая с помощью цикла for подсчитывает количество
+символов в строке без учета пробелов.
     </p>
     <script src="a.js"></script>
 </body>
