--- a/for/32/a.html
+++ b/for/32/a.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+        Дан массив. Найди индекс первого отрицательного числа. Если его нет — выведи -1.
+        [4, 3, -2, 7] → 2
+        [1, 2, 3] → -1
     </p>
     <script src="a.js"></script>
 </body>
+
 </html>
