--- a/for/18/a.html
+++ b/for/18/a.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+        Напишите цикл for, который выводит числа от 1 до 100. Если число одновременно кратно 7 и 9,
+прервите выполнение цикла.
     </p>
     <script src="a.js"></script>
 </body>
