--- a/for/29/a.html
+++ b/for/29/a.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+        Дан массив чисел [1, 5, 13, 21, 8, 7, 14]. Найдите первое число, которое делится на 7 без остатка. Если такого
+        нет — вернуть "Not found".
     </p>
     <script src="a.js"></script>
 </body>
+
 </html>
