--- a/for/30/a.html
+++ b/for/30/a.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+        Дан массив чисел [1, -3, 5, 0, 7]. Вычисли сумму всех положительных чисел. Отрицательные и нули нужно
+        пропустить.
     </p>
     <script src="a.js"></script>
 </body>
+
 </html>
