--- a/for/34/a.html
+++ b/for/34/a.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <p>
-        Выведите числа от 0 до 100 с помощью цикла for. Если число кратно 7, пропустите его и перейдите
-к следующей итерации.
+        Дан массив строк. Выведи только те строки, длина которых 5 символов или больше.
+["hi", "hello", "world", "yo"] → "hello", "world"
+["abc", "abcd", "abcde"] → "abcde"
     </p>
     <script src="a.js"></script>
 </body>
