--- a/23.Events/10/a.html
+++ b/23.Events/10/a.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <button class="btn1">Заблокировать</button>
+    <button class="btn2">Разблокировать</button>
+    <input value="">
     <script src="a.js"></script>
 </body>
 </html>
