--- a/23.Events/11/a.html
+++ b/23.Events/11/a.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <button>click</button>
+    <input class="first" value="!!!">
+    <input class="second" value="???">
     <script src="a.js"></script>
 </body>
 </html>
