--- a/23.Events/2/a.html
+++ b/23.Events/2/a.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <button>Click me</button>
+    <input value="+375(хх)ххх-хх-хх">
     <script src="a.js"></script>
 </body>
 </html>
