--- a/23.Events/7/a.html
+++ b/23.Events/7/a.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <input value="">
+    <button>Посчитать</button>
+
+    <p>Result:</p>
     <script src="a.js"></script>
 </body>
 </html>
