--- a/23.Events/4/a.html
+++ b/23.Events/4/a.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <button>click me</button>
+    <input value="">
     <script src="a.js"></script>
 </body>
 </html>
