--- a/23.Events/8/a.html
+++ b/23.Events/8/a.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Найдите произведение элементов массива [2, 3, 4, 5].
-    </p>
+    <button>click</button>
     <script src="a.js"></script>
 </body>
 </html>
